Un peu d'avancement , second commit .

--- a/index.html
+++ b/index.html
@@ -63,10 +63,37 @@
                         <div class="home__perfil">
                             <img src="assets/img6.jpg" alt="home image" class="home__img">
                         </div>
+                        <svg class="home__star-1" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M25 0L31.7523 18.2477L50 25L31.7523 31.7523L25 
+                            50L18.2477 31.7523L0 25L18.2477 18.2477L25 0Z" />
+                        </svg>
+                        <svg class="home__star-2" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M25 0L31.7523 18.2477L50 25L31.7523 31.7523L25 
+                            50L18.2477 31.7523L0 25L18.2477 18.2477L25 0Z" />
+                        </svg>
                     </div>
+                    <h1 class="home__profession">
+                        Frontend <br>
+                        Developer
+                    </h1>
                 </div>
             </section>
-            <div class="resume__left"></div>
+            <div class="resume__left">
+                <!-- A Propos -->
+                <section class="about section" id="about">
+                    <h2 class="section__title">Info Personnel</h2>
+                    <div class="about__container grid">
+                        <p>
+                            Hi, je réponds au nom de Mawulolo TONA, basé à Lomé-Togo.
+                            Je réalises un travail sur mesure et j'effectues des études de marché avant de démarrer un projet.
+                            Ce qui vous donne un avantage certain pour obtenir de meilleur résultat vos projets qui me seront confiés.
+                        </p>
+                        <a href="" class="about__button">
+                            Download CV <i class="ri-download-line"></i>
+                        </a>
+                    </div>
+                </section>
+            </div>
             <div class="resume__right"></div>
         </main>
         <!-- Footer -->
