ça continue , third commit .

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <!-- En-tête -->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Mawulolo</a>
+                <a href="#" class="nav__logo">TKEcorp</a>
                 <div class="nav__menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">
+                            <a href="#home" class="nav__link active-link">
                                 <i class="ri-home-line"></i>
                             </a>
                         </li>
@@ -88,19 +88,158 @@
                             Je réalises un travail sur mesure et j'effectues des études de marché avant de démarrer un projet.
                             Ce qui vous donne un avantage certain pour obtenir de meilleur résultat vos projets qui me seront confiés.
                         </p>
-                        <a href="" class="about__button">
+                        <a href="assets/files/Mawulolo_TONA_CV.pdf" download="" class="about__button">
                             Download CV <i class="ri-download-line"></i>
                         </a>
+                        <ul class="about__social">
+                            <li>
+                                <a href="https://github.com/elo20ce" target="_blank" class="about__social-link">GitHub</a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/tke237/" target="_blank" class="about__social-link">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/MawuloloTona" target="_blank" class="about__social-link">Twitter</a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <!-- Compétences -->
+                <section class="skills section" id="skills">
+                    <h2 class="section__title">Compétences</h2>
+                    <div class="skills__container">
+                        <div class="skills__content">
+                            <ul class="skills__list">
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> HTML & CSS
+                                </li>
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> JavaScript
+                                </li>
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> Git & GitHub
+                                </li>
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> Bootstrap
+                            </ul>
+                            <ul class="skills__list">
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> React
+                                </li>
+                                <li class="resume__title">
+                                    <i class="ri-arrow-drop-right-line"></i> Figma
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <!-- Etudes -->
+                <section class="education section" id="education">
+                    <h2 class="section__title">Etudes</h2>
+                    <div class="education__container grid">
+                        <div>
+                            <h2 class="resume__title">
+                                <i class="ri-arrow-drop-right-line"></i> Licence en Developpement Web
+                            </h2>
+                            <div class="resume__data">
+                                <span>HEST - Université</span>
+                                <span>2022 - 2024</span>
+                                <a href="assets/files/Certificats électroniques.pdf" target="_blank" class="resume__button-link">
+                                   Voir <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div>
+                            <h2 class="resume__title">
+                                <i class="ri-arrow-drop-right-line"></i> Baccalauréat Scientifique (D)
+                            </h2>
+                            <div class="resume__data">
+                                <span>Lycée Agbodrafo</span>
+                                <span>2020 - 2021</span>
+                                <a href="assets/files/Diplome.pdf" target="_blank" class="resume__button-link">
+                                   Voir <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </section>
             </div>
-            <div class="resume__right"></div>
+            <div class="resume__right">
+                <!-- Work -->
+                <section class="work section" id="work">
+                    <h2 class="section__title">Expérience de Travail</h2>
+                    <div class="work__container grid">
+                        <div>
+                            <h2 class="resume__title">
+                                <i class="ri-arrow-drop-right-line"></i> Developpeur Web
+                            </h2>
+                            <div class="resume__data">
+                                <span>Nehemya - Togo / 2024</span>
+                                <p>
+                                    J'ai travaillé dans l'entreprise en offrant une expérience 
+                                    dans le domaine du travail et en faisant un travail de qualité .
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Certificats -->
+                <section class="certificates section">
+                    <h2 class="section__title">Certificats</h2>
+                    <div class="certificates__container grid">
+                        <div>
+                            <h2 class="resume__title">
+                                <i class="ri-arrow-drop-right-line"></i> Ingénieurs des travaux Informatiques
+                            </h2>
+                            <div class="resume__data">
+                                <span>HEST Université - 2022</span>
+                                <a href="assets/files/Certificats électroniques.pdf" target="_blank" class="resume__button-link">
+                                    Voir <i class="ri-external-link-line"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- References -->
+                <section class="references section">
+                    <h2 class="section__title">Références</h2>
+                    <div class="references__container grid">
+                        <div>
+                            <h2 class="resume__title">
+                                <i class="ri-arrow-drop-right-line"></i> Mitonin Sandrie ABALO
+                            </h2>
+                            <div class="resume__data">
+                                <span>Agent Comptable</span>
+                                <span>user@gmail.com / +228 98-54-54-51</span>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </main>
         <!-- Footer -->
         <footer class="footer">
-
+            <div class="footer__container grid">
+                <div>
+                    <h3 class="footer__title">Téléphone</h3>
+                    <span class="footer__info">(+228) 97-67-03-81</span>
+                </div>
+                <div>
+                    <h3 class="footer__title">Email</h3>
+                    <span class="footer__info">tonamawulolo@gmail.com</span>
+                </div>
+                <div>
+                    <h3 class="footer__title">Website</h3>
+                    <a href="#" target="_blank" class="footer__link">www.TKEcorp.com</a>
+                </div>
+            </div>
         </footer>
     </div>
+    <!-- Faire defiler vers le haut -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-fill"></i>
+    </a>
     <!-- lien JavaScript -->
    <script src="main.js"></script>   
 </body>
