modified frontend commit . Let's Go

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <span class="footer__info">tonamawulolo@gmail.com</span>
                 </div>
                 <div>
-                    <h3 class="footer__title">Website</h3>
+                    <h3 class="footer__title">SiteWeb</h3>
                     <a href="#" target="_blank" class="footer__link">www.TKEcorp.com</a>
                 </div>
             </div>
